fix mobile header/navbar spacing

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -9,6 +9,7 @@
 }
 
 .header-avatar {
+  padding-top: 2em;
   width: fit-content;
 
 }
