--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 120px;
-  background-color: #4056a1;
+  background-color: none;
   color: #ffffff;
   padding: 0 1em;
   position: fixed; 
